# scarface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: CMakeLists.txt  README.md
code/event-system/: CMakeLists.txt
code/event-system/include/: IEvent.hpp  InitFunction.hpp
code/event-system/source/: Common.hpp  Event.cpp
code/scarface-lib/: CMakeLists.txt  radKey.cpp  radobjects.hpp
code/scarface-lib/gameobject/: gamesetobject.hpp  scriptobject.hpp
code/scarface-lib/gameobject/render/: todobject.hpp
code/scarface-lib/scripting/: RegisteredMethods.hpp  radobjects.hpp
code/scarface-lib/streaming/: chunkfile.hpp
code/scarface-lib/torque3d/: CodeBlock.cpp  CodeBlock.h
code/scarface-mod/: CMakeLists.txt  generate-solution.cmd
code/scarface-mod-rmk/: CMakeLists.txt
code/scarface-mod-rmk/source/: Direct3DDevice9Proxy.cpp  Direct3DDevice9Proxy.h  Direct3DProxy.cpp  Direct3DProxy.h  TextEditor.cpp  common.hpp  config.cpp  config.hpp  hooks.cpp  hooks.hpp  logger.cpp  logger.hpp  main.cpp  mod.cpp  mod.hpp  modGui.cpp  mod_gui.cpp  mod_style.cpp  pointers.cpp  pointers.hpp
code/scarface-mod-rmk/source/d3d9/: Direct3DDevice9Proxy.cpp  Direct3DDevice9Proxy.h  Direct3DProxy.h
code/scarface-mod-rmk/source/natives/: logNatives.cpp  testNatives.cpp  utilNatives.cpp
code/scarface-mod-rmk/source/tools/nativedumper/: nativeDumper.cpp  nativeDumper.hpp
code/scarface-mod-rmk/source/utils/: StackwalkerUtils.hpp
code/scarface-mod/premake-rules/: main.lua  scarface-mod.lua
code/scarface-mod/source/: CConsole.h  CINI.h  CLog.h  Direct3DDevice9Proxy.cpp  Direct3DDevice9Proxy.h  DllMain.cpp  DllMain.h  Helpers.h  HookingUtils.hpp  common.hpp  gameEventPools.hpp  hooks.cpp  hooks.hpp  logger.cpp  main.hpp  memory.hpp  mod.cpp  mod.hpp  modGui.cpp  pointers.hpp
code/scarface-mod/source/Torque3D/: ast.h  types.h
code/scarface-mod/source/d3d9/: Direct3DDevice9Proxy.cpp  Direct3DDevice9Proxy.h  Direct3DProxy.cpp  d3d.h  d3dh.h  d3dx_include.h
code/scarface-mod/source/gameutils/: codeblockHelper.hpp  pure3dHelper.hpp  radLoadBaseStreamImpl.hpp
code/scarface-mod/source/natives/: logNatives.cpp  utilNatives.cpp
code/scarface-mod/source/utils/: ImGuiExtras.hpp  TextEditor.h
code/scarface-rcf-explorer/: generate-solution.cmd  remove-solution.cmd
code/scarface-rcf-explorer-rmk/: CMakeLists.txt
code/scarface-rcf-explorer-rmk/source/: logger.cpp  logger.hpp  main.cpp  main_window.cpp  main_window.hpp  renderer.cpp  renderer.hpp
code/scarface-rcf-explorer/premake-rules/: main.lua  premake-fixes.lua  scarface-rcf-explorer.lua
code/scarface-rcf-explorer/source/: Cement.cs  INIFile.cs  ProcessWithOutput.cs  Pure3D.cs  SettingsForm.cs  Window.cs
code/scarface-rcf-explorer/source/brokenface/: decompiler.py
code/stwiy-client/: CMakeLists.txt
code/stwiy-client/source/: common.hpp  hooks.cpp  hooks.hpp  logger.cpp  main.hpp  mod.cpp  mod.hpp  modGui.cpp  modStyle.cpp  networkClient.cpp  networkClient.hpp  pointers.cpp  pointers.hpp
code/stwiy-client/source/d3d9/: Direct3DDevice9Proxy.cpp
code/stwiy-client/source/enet/: network_client.hpp
code/stwiy-client/source/natives/: testNatives.cpp
code/stwiy-client/source/net/: kcpClient.hpp  net_buffer.cpp  net_buffer.hpp  net_event.hpp  net_kcp_socket.cpp  net_kcp_socket.hpp  net_manager.cpp  net_manager.hpp
code/stwiy-client/source/utils/: ImGuiExtras.cpp
code/stwiy-net/: CMakeLists.txt  README.md
code/stwiy-net/demo/: CMakeLists.txt  main.cpp
code/stwiy-net/src/: net_buffer.cpp  net_buffer.hpp  net_client.cpp  net_client.hpp  net_event.hpp  net_event_serializer.cpp  net_event_serializer.hpp  net_server.cpp  net_server.hpp  net_socket.hpp  net_socket_win.cpp  network_client.cpp  network_client.hpp  network_server.cpp  network_server.hpp  packets.hpp
code/stwiy-server/: CMakeLists.txt
code/stwiy-server/source/: common.hpp  main.cpp
code/stwiy-server/source/enet/: network_server.hpp
code/stwiy-server/source/net/: kcpServer.cpp
code/test-client/: CMakeLists.txt
code/test-client/source/: common.hpp  main.cpp  main.hpp
documents/: natives.html
kaitai/: CMakeLists.txt  kaitai.cmake
kaitai/definitions/: cement.ksy  pure3d.ksy
tools/web-rcf-explorer/: dictionary.json  ui.html
tools/web-rcf-explorer/brokenface/: decompiler.html
tools/web-rcf-explorer/css/: style.css
tools/web-rcf-explorer/editor/: index.html
